--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,13 +127,14 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-      
-      <li class='list'>
-        <% @items.each do |item| %>
+      <% if @items.any? %>
+
+      <% @items.each do |item| %>
+        <li class='list'>
+        
           <%= link_to "#" do %>
             <div class='item-img-content'>
               <%= image_tag item.image, class: "item-img" %>
-
             <%# 商品が売れていればsold outを表示しましょう %>
             <%# <div class='sold-out'>
               <span>Sold Out!!</span>
@@ -154,31 +155,32 @@
               </div>
             </div>
           <% end %>
-        <% end %>
-      </li>
+        </li>
+      <% end%>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
       <%# 商品がある場合は表示されないようにしましょう %>
-      
-      <%# <li class='list'> %>
-        <%#= link_to '#' do %>
-        <%#= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
-        <%# <div class='item-info'> %>
-          <%# <h3 class='item-name'> %>
-            <%# 商品を出品してね！ %>
-          <%# </h3> %>
-          <%# <div class='item-price'> %>
-            <%# <span>99999999円<br>(税込み)</span> %>
-            <%# <div class='star-btn'> %>
-              <%#= image_tag "star.png", class:"star-icon" %>
-               <%# <span class='star-count'>0</span> %>
-            <%# </div> %>
-          <%# </div> %>
-        <%# </div> %>
-        <%# end %>
-      
+      <% else %>
+
+      <li class='list'>
+        <%= link_to '#' do %>
+        <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
+        <div class='item-info'>
+          <h3 class='item-name'>
+            商品を出品してね！
+          </h3>
+          <div class='item-price'>
+            <span>99999999円<br>(税込み)</span>
+            <div class='star-btn'>
+              <%= image_tag "star.png", class:"star-icon" %>
+               <span class='star-count'>0</span>
+            </div>
+          </div>
+        </div>
+        <% end %>
       </li>
+      <% end %>
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
     </ul>
