--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -6,7 +6,7 @@
     <h2 class="items-sell-title">商品の情報を入力</h2>
     <%= form_with model: @item, local: true do |f| %>
 
-    <%= render 'shared/error_messages', model: @item, resource: f.object %>
+    <%= render 'shared/error_messages', resource: @item %>
 
     <div class="img-upload">
       <div class="weight-bold-text">
