--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,9 +131,13 @@
             <div class='item-img-content'>
               <%= image_tag item.image, class: "item-img" %>
             <%# 商品が売れていればsold outを表示しましょう %>
-            <%# <div class='sold-out'>
+            <% @orders.each do |order| %>
+            <% if item.id == order.item_id %>
+            <div class='sold-out'>
               <span>Sold Out!!</span>
-            </div> %>
+            </div>
+            <% end %>
+            <% end %>
             <%# //商品が売れていればsold outを表示しましょう %>
             </div>
             <div class='item-info'>
