--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,12 +8,11 @@
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <% @orders.each do |order| %>
-      <% if @item.id == order.item_id %>
+      
+      <% if @item.id == @order.item_id %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-      <% end %>
       <% end %>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
@@ -31,8 +30,7 @@
       <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
       <%= link_to "削除",  item_path(@item.id), method: :delete, class:"item-destroy" %>
-
-    <% else %>
+    <% elsif @order.item_id != @item.id %>
       <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
     <% end %>
   <% end %>
