--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,10 +8,12 @@
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
       
-      <% if @item.id == @order %>
-      <div class="sold-out">
-        <span>Sold Out!!</span>
-      </div>
+      <% unless @item.order.nil? %>
+        <% if @item.id == @item.order.item_id %>
+          <div class="sold-out">
+            <span>Sold Out!!</span>
+          </div>
+        <% end %>
       <% end %>
 
     </div>
@@ -29,7 +31,7 @@
       <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
       <%= link_to "削除",  item_path(@item.id), method: :delete, class:"item-destroy" %>
-    <% elsif @item.id != @order %>
+    <% elsif @item.order.nil? || @item.id != @item.order.item_id %>
       <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
     <% end %>
   <% end %>
