--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,14 +130,12 @@
           <%= link_to item_path(item.id), method: :get do %>
             <div class='item-img-content'>
               <%= image_tag item.image, class: "item-img" %>
-
-          <% @orders.each do |order| %>
-            <% if item.id == order.item_id %>
+          
+            <% unless item.order.nil? %>
               <div class='sold-out'>
                 <span>Sold Out!!</span>
               </div>
             <% end %>
-          <% end %>
 
             </div>
             <div class='item-info'>
