--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,7 +131,7 @@
             <div class='item-img-content'>
               <%= image_tag item.image, class: "item-img" %>
           
-            <% unless item.order.nil? %>
+            <% if item.order != nil %>
               <div class='sold-out'>
                 <span>Sold Out!!</span>
               </div>
