--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -155,7 +155,7 @@
       <% end%>
     <% else %>
       <li class='list'>
-        <%= link_to new_item_path do %>
+        <%= link_to dummy_item_index_path do %>
         <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
         <div class='item-info'>
           <h3 class='item-name'>
