--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -91,7 +91,13 @@
     </div>
     <p class='info-text'>※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。</p>
   </div>
-
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">自己紹介</label>
+      <span class="indispensable">任意</span>
+    </div>
+    <%= f.text_area :introduce, class:"input-int", id:"name", placeholder:"例) よろしくね！", maxlength:"1000" %>
+  </div>
   <div class="form-group">
     <h2 class='form-bottom-text'>
       「会員登録」のボタンを押すことにより、
