--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -76,7 +76,7 @@
 
   <% if user_signed_in? %>
     <% if current_user.id == @user.id %>
-      <%= link_to "プロフィール編集", "#", method: :get, class: "item-red-btn" %>
+      <%= link_to "プロフィール編集", edit_user_path(current_user.id), method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
       <%= link_to "アカウント削除",  "#", class:"item-destroy" %>
     <% end %>
