--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -96,14 +96,14 @@
 
   <% if user_signed_in? %>
     <% if current_user.id == @user.id %>
-      <%= link_to "プロフィール編集", edit_user_registration_path(current_user.id), method: :get, class: "item-red-btn" %>
+      <%= link_to "プロフィール編集", edit_user_registration_path(current_user), method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
-      <%= link_to "アカウント削除",  "#", class:"item-destroy" %>
+      <%= link_to "退会する",  user_delete_path(current_user), class:"item-destroy" %>
     <% end %>
   <% end %>
 
     <div class="item-explain-box">
-      <span><%= "なにかしら" %></span>
+      <span><%= "※退会手続きページへ移行します" %></span>
     </div>
 
 
