--- a/app/views/users/user_delete.html.erb
+++ b/app/views/users/user_delete.html.erb
@@ -2,22 +2,9 @@
 
 <div class="item-show">
   <div class="item-box">
-    <h2 class="name">Profile</h2>
+    <h1 class="name">ありがとうございました!</h1>
     
 
-    <table class="detail-table">
-      <tbody>
-        <tr>
-          <th class="detail-item">自己紹介</th>
-          <% if @user.introduce != nil %>
-          <td class="detail-value"><%= @user.introduce %></td>
-          <% else %>
-          <td class="detail-value"><%= "" %></td>
-          <% end %>
-        </tr>
-        
-      </tbody>
-    </table>
 
     <div class="item-box">
       <h2 class="user-items">
@@ -90,7 +77,7 @@
   <% end %>
 
     <div class="item-explain-box">
-      <span><%= "なにかしら" %></span>
+      <span><%= "※アカウントが削除されます" %></span>
     </div>
 
   </div>
