--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -2,15 +2,25 @@
 
 <div class="item-show">
   <div class="item-box">
+  <% if @item.user.deleted_at == nil %>
     <h2 class="name">
       <%= @item.item %>
     </h2>
+  <% else %>
+    <h2 class="name">
+        <%= "※出品者が退会済みです" %>
+     </h2>
+  <% end %>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
       
       <% if @item.order != nil %>
         <div class="sold-out">
           <span>Sold Out!!</span>
+        </div>
+      <% elsif @item.user.deleted_at != nil %>
+        <div class="sold-out">
+          <span>ユーザー退会済み</span>
         </div>
       <% end %>
 
@@ -29,7 +39,7 @@
       <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
       <%= link_to "削除",  item_path(@item.id), method: :delete, class:"item-destroy" %>
-    <% else %>
+    <% elsif @item.user.deleted_at == nil %>
       <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
     <% end %>
   <% end %>
@@ -41,7 +51,11 @@
       <tbody>
         <tr>
           <th class="detail-item">出品者</th>
-          <td class="detail-value"><%= link_to @item.user.name, user_path(@item.user_id )%></td>
+            <% if @item.user.deleted_at == nil %>
+              <td class="detail-value"><%= link_to @item.user.name, user_path(@item.user_id )%></td>
+            <% else %>
+              <td class="detail-value"><%= link_to @item.user.name, user_path(@item.user_id )%>(退会済み)</td>
+            <% end %>
         </tr>
         <tr>
           <th class="detail-item">カテゴリー</th>
@@ -65,6 +79,7 @@
         </tr>
       </tbody>
     </table>
+    <% if @item.user.deleted_at == nil %>
     <div class="option">
       <div class="favorite-btn">
         <%= image_tag "star.png" ,class:"favorite-star-icon" ,width:"20",height:"20"%>
@@ -75,8 +90,10 @@
         <span>不適切な商品の通報</span>
       </div>
     </div>
+    <% end %>
   </div>
 
+  <% if @item.user.deleted_at == nil %>
   <div class="comment-box">
     <form>
       <textarea class="comment-text"></textarea>
@@ -91,6 +108,7 @@
       </button>
     </form>
   </div>
+  <% end %>
   <div class="links">
     <a href="#" class="change-item-btn">
       ＜ 前の商品
