コメント投稿部分のビュー

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -95,23 +95,30 @@
 
   <div class="comment-box">
     <h4>＜コメント一覧＞</h4>
-    <% @comments.each do |comment| %>
-    <div class="comment-text">
-      <p>
-          <%= link_to comment.user.name, user_path(comment.user_id) %> : 
-          <%= comment.created_at.to_s(:datetime_jp) %>
-      </p>
-      <p>
-        <br><%= comment.comment %><br>
-      </p>
-    </div>
+    <% if @comments != nil %>
+      <% @comments.each do |comment| %>
+        <div class="comment-text">
+          <p>
+            <%= link_to comment.user.name, user_path(comment.user_id) %> : 
+            <%= comment.created_at.to_s(:datetime_jp) %>
+          </p>
+          <p>
+            <br><%= comment.comment %><br>
+          </p>
+        </div>
+      <% end %>
+    <% else %>
+        <div class="comment-text">
+          まだコメントがありません
+        </div>
     <% end %>
   </div>
+
   <% if @item.user.deleted_at == nil %>
   <div class="comment-box">
   <% if user_signed_in? %>
     <%= form_with model: [@item, @comment], local: true do |f| %>
-      <%= f.text_area :comment, class:"comment-text"%>
+      <%= f.text_area :comment, class:"comment-text", placeholder: "１４０字まで" %>
       <p class="comment-warn">
         相手のことを考え丁寧なコメントを心がけましょう。
         <br>
