--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -7,11 +7,8 @@
   <div class="items-sell-main">
     <h2 class="items-sell-title">商品の情報を入力</h2>
     <%= form_with model: @item, local: true do |f| %>
-
     
     <%= render 'shared/error_messages', resource: @item %>
-    
-
     
     <div class="img-upload">
       <div class="weight-bold-text">
@@ -39,6 +36,11 @@
         </div>
         <%= f.text_area :explanation, class:"items-text", id:"item-info", placeholder:"商品の説明（必須 1,000文字まで）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。" ,rows:"7" %>
       </div>
+      <%# <div class="weight-bold-text">
+        ブランド、タグ
+        <span class="indispensable">任意</span>
+      </div>
+      <%= f.text_area :brand, class:"items-text", id:"item-name", placeholder:"例) #Furima" %>
     </div>
     
 
