--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,13 +2,21 @@
 <header class='top-page-header'>
   <div class='search-bar-contents'>
     <%= link_to image_tag("furima-logo-color.png", class:"furima-icon"), "/" %>
-    <form class="search-form" action="#">
-      <input class='input-box' placeholder='キーワードから探す'>
+    <%# <form class="search-form" action="/items/search" method="get" name="keyword" id="keyword">
+      <input class='input-box' placeholder='キーワードから探す' name="keyword" id="keyword">
       <button class="search-button">
         <%= image_tag "search.png", class:"search-icon" %>
-      </button>
-    </form>
+      <%# </button>
+    </form> %>
+    <%= form_with(url: search_items_path, local: true, method: :get, class: "search-form") do |f| %>
+      <%= f.text_field :keyword, class:'search-box', placeholder: 'キーワードから探す' %>
+      <%= f.submit "", class: "search-button" %>
+        <%= image_tag "search.png", class:"search-icon" %>
+    <% end %>
   </div>
+
+ 
+  
   <div class='nav'>
     <ul class='lists-left'>
       <li><%= link_to 'カテゴリー', "#", class: "category-list" %></li>
