--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,17 +1,13 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
+
 <header class='top-page-header'>
   <div class='search-bar-contents'>
     <%= link_to image_tag("furima-logo-color.png", class:"furima-icon"), "/" %>
-    <%# <form class="search-form" action="/items/search" method="get" name="keyword" id="keyword">
-      <input class='input-box' placeholder='キーワードから探す' name="keyword" id="keyword">
-      <button class="search-button">
-        <%= image_tag "search.png", class:"search-icon" %>
-      <%# </button>
-    </form> %>
     <%= form_with(url: search_items_path, local: true, method: :get, class: "search-form") do |f| %>
       <%= f.text_field :keyword, class:'search-box', placeholder: 'キーワードから探す' %>
-      <%= f.submit "", class: "search-button" %>
-        <%= image_tag "search.png", class:"search-icon" %>
+      <%= f.submit "",type:'image', src:"../assets/search.png", class:"search-button" %>
+        
+        
     <% end %>
   </div>
 
