--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -22,6 +22,7 @@
         <%= f.file_field :image, id:"item-image" %>
       </div>
     </div>
+    <div id="img-preview"></div>
     
     <div class="new-items">
       <div class="weight-bold-text">
