--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -20,6 +20,7 @@
         </p>
         <%= f.file_field :image, id:"item-image" %>
       </div>
+      <div id="img-preview"></div>
     </div>
 
     <div class="new-items">
