いいねを導入した！(非Ajax)
非同期通信がうまくいかないので、あとで換装する！

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -81,11 +81,8 @@
       </tbody>
     </table>
     <% if @item.user.deleted_at == nil %>
-    <div class="option">
-      <div class="favorite-btn">
-        <%= image_tag "star.png" ,class:"favorite-star-icon" ,width:"20",height:"20"%>
-        <span>お気に入り 0</span>
-      </div>
+    <div class="option" id="item-<%= @item.id %>" >
+      <%= render 'likes/like', item: @item %>
       <div class="report-btn">
         <%= image_tag "flag.png" ,class:"report-flag-icon" ,width:"20",height:"20"%>
         <span>不適切な商品の通報</span>
