--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -105,16 +105,34 @@
   position: relative;
 }
 
-.favorite-btn {
+.follow-btn {
+  background-color: #fff;
   border-radius: 40px;
   width: 15vw;
   min-width: 200px;
-  color: rgb(249, 75, 0);
-  border: 2px solid #ffb340;
+  height: 40px;
+  color: rgba(94, 195, 241, 0.801);
+  border: 2px solid #7496dfd2;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-right: 20px;
+  cursor: pointer;
+}
+
+.unfollow-btn {
+  background-color: #fff;
+  border-radius: 40px;
+  width: 15vw;
+  min-width: 200px;
+  height: 40px;
+  color: rgba(0, 170, 249, 0.801);
+  border: 2px solid #0655ffd2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 20px;
+  cursor: pointer;
 }
 
 .favorite-star-icon {
