--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -113,10 +113,7 @@
   <% if user_signed_in? %>
     <% if current_user.id != @user.id && @user.deleted_at == nil %>
     <div class="option">
-      <div class="favorite-btn">
-        <%= image_tag "star.png" ,class:"favorite-star-icon" ,width:"20",height:"20"%>
-        <span>フォローする</span>
-      </div>
+      <%= render 'follow' %>
       <div class="report-btn">
         <%= image_tag "flag.png" ,class:"report-flag-icon" ,width:"20",height:"20"%>
         <span>ユーザーの通報</span>
